Outbound added client/server side but not fully implemented

--- a/public/app/screens/outbound/outbound.jade
+++ b/public/app/screens/outbound/outbound.jade
@@ -1,2 +1,33 @@
 .container
+  button-tabs
   list-items
+  table.table.table-hover.table-striped.table-condensed
+    thead
+      tr.table-header-bar
+        th.click(ng-show="sortOrder != 'orderNumber' && sortOrder != '-orderNumber'", ng-click="sortOrder = 'orderNumber'")  Order Number
+        th.click(ng-show="sortOrder == 'orderNumber' || sortOrder == '-orderNumber'", ng-click="reverseOrder(sortOrder)")  Order Number
+          b.caret(ng-show="sortOrder == 'orderNumber'")
+          b.dropup(ng-show="sortOrder == '-orderNumber'")
+            b.caret
+        th.click(ng-show="sortOrder != 'placedBy.username' && sortOrder != '-placedBy.username'", ng-click="sortOrder = 'placedBy.username'") Placed By
+        th.click(ng-show="sortOrder == 'placedBy.username' || sortOrder == '-placedBy.username'", ng-click="reverseOrder(sortOrder)") Placed By
+          b.caret(ng-show="sortOrder == 'placedBy.username'")
+          b.dropup(ng-show="sortOrder == '-placedBy.username'")
+            b.caret
+        th.click(ng-show="sortOrder != 'status' && sortOrder != '-status'", ng-click="sortOrder = 'status'") Status
+        th.click(ng-show="sortOrder == 'status' || sortOrder == '-status'", ng-click="reverseOrder(sortOrder)") Status
+          b.caret(ng-show="sortOrder == 'status'")
+          b.dropup(ng-show="sortOrder == '-status'")
+            b.caret
+        th.click(ng-show="sortOrder != 'totalCost' && sortOrder != '-totalCost'", ng-click="sortOrder = 'totalCost'") Total Price
+        th.click(ng-show="sortOrder == 'totalCost' || sortOrder == '-totalCost'", ng-click="reverseOrder(sortOrder)") Total Price
+          b.caret(ng-show="sortOrder == 'totalCost'")
+          b.dropup(ng-show="sortOrder == '-totalCost'")
+            b.caret
+    tbody
+      tr(ng-repeat="outboundOrder in outboundOrders | filter:search | orderBy:sortOrder")
+        td
+          a(href="/admin/outbound/{{outboundOrder._id}}") {{ outboundOrder.orderNumber }}
+        td {{ outboundOrder.placedBy.username }}
+        td {{ outboundOrder.status }}
+        td {{ outboundOrder.totalCost | currency }}
