--- a/public/app/account/profile.jade
+++ b/public/app/account/profile.jade
@@ -25,4 +25,4 @@
             .pull-right
               button.btn.btn-primary(ng-click="update()", ng-disabled="profileForm.$invalid") Submit
               | &nbsp;
-              a.btn.btn-default(href="/") Cancel
+              a.btn.btn-default(href="/admin/users") Cancel
