--- a/public/app/admin/user/user-add.jade
+++ b/public/app/admin/user/user-add.jade
@@ -24,4 +24,4 @@
             .pull-right
               button.btn.btn-primary(ng-click="addUser()", ng-disabled="userForm.$invalid") Submit
               | &nbsp;
-              a.btn.btn-default(href="/") Cancel
+              a.btn.btn-default(href="/admin/users") Cancel
