shows outbound order details

--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -54,6 +54,7 @@ script(type="text/javascript", src="/app/screens/locations/mvCachedLocation.js")
 script(type="text/javascript", src="/app/screens/outbound/mvOutboundScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/outbound/mvCachedOutboundOrder.js")
 script(type="text/javascript", src="/app/screens/outbound/mvOutboundOrder.js")
+script(type="text/javascript", src="/app/screens/outbound/mvOutboundDetailCtrl.js")
 script(type="text/javascript", src="/app/screens/products/mvProduct.js")
 script(type="text/javascript", src="/app/screens/products/mvCachedProduct.js")
 script(type="text/javascript", src="/app/screens/reports/mvReportsScreenCtrl.js")
