--- a/public/css/site.css
+++ b/public/css/site.css
@@ -69,6 +69,7 @@ a.link-alias-white {
 }
 .non-tab {
   margin-bottom: 20px;
+  margin-right: 5px;
 }
 .vertical-center {
   vertical-align: middle;
