changes to main-products.jade

--- a/public/app/main/main-products.jade
+++ b/public/app/main/main-products.jade
@@ -11,5 +11,5 @@
           .col-md-6.text-left {{ example }}
         .row
           .col-md-6.text-right Low-Quantity Products:
-          .col-md-6.text-left 0
+          .col-md-6.text-left {{ products_low }}
         .col-md-12
