--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -252,3 +252,6 @@ $inventory-text-color = white
   margin-right 15px
 .margin-right-30
   margin-right 30px
+
+.table-striped > tbody > tr:nth-of-type(odd).lowQuantity, .lowQuantity
+  background #ffa60c
