--- a/public/app/admin/product/product-edit.jade
+++ b/public/app/admin/product/product-edit.jade
@@ -33,13 +33,15 @@
           label.col-md-2.control-label(for="manufacturer") Manufacturer
           .col-md-10
             input.form-control(name="manufacturer", type="text", placeholder="Product Manufacturer", ng-model="manufacturer", select-on-click)
+
         .form-group
-          label.col-md-2.control-label(for="alarm") Low-Level Alarm
+          label.col-md-2.control-label(for="alarm_on") Low-Level Alarm
           .col-md-1
-            input.checkbox-inline(style="vertical-align: bottom", type="checkbox", ng-model="alarm")
-          label.col-md-3.control-label(for="alarm_at", ng-show="alarm") Set Low-Level Alarm at:
+            input.checkbox-inline(style="vertical-align: bottom", type="checkbox", ng-model="alarm_on")
+
+          label.col-md-3.control-label(for="alarm_at", ng-show="alarm_on") Set Low-Level Alarm at:
           .col-md-5
-            input(name="alarm_at", type="text", ng-model="alarm_at", ng-show="alarm", placeholder="1000", select-on-click)
+            input(name="alarm_at", type="text", ng-model="alarm_at", ng-show="alarm_on", placeholder="1000", select-on-click)
         .form-group
           .col-md-10.col-md-offset-2
             .pull-right
