changes to new-purchase-order

--- a/public/app/screens/products/products-list.jade
+++ b/public/app/screens/products/products-list.jade
@@ -52,7 +52,7 @@
 
   .overlay(ng-show="isAdding()")
     button.btn.btn-warning(ng-click="cancel()") Cancel
-    .overlay-container.well.text-center#dog(style="height: 600px")
+    .overlay-container.well.text-center(style="height: 600px; width: 800px;")
       .no-overflow
         form.form-horizontal(name="addProductForm")
           fieldset
