--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -30,8 +30,10 @@
           td
             input(type="text", ng-model="product.quantity", ng-change="recalculate(product, product.quantity)", greater-than-zero, select-on-click, required)
           td {{ product.totalPerLine | currency}}
-
   .form-group
+    label.col-md-3.control-label(for="orderID") Order Id:
+      .col-md-5.pull-right
+        input(name="orderID", type="text", ng-model="uniqueOrderNumber", select-on-click)
     .col-md-10.col-md-offset-2
       .pull-right
         .form-group
