--- a/public/app/screens/products/products-list.jade
+++ b/public/app/screens/products/products-list.jade
@@ -44,7 +44,7 @@
           b.dropup(ng-show="sortOrder == '-manufacturer'")
             b.caret
     tbody
-      tr(ng-repeat="product in products | filter:search | orderBy:sortOrder", ng-class="{lowQuantity: product.alarm_on && product.quantity <= product.alarm_at}", ng-show="approved(product)")
+      tr(ng-repeat="product in products | filter:search | orderBy:sortOrder", ng-class="{lowQuantity: product.alarm_enabled && product.quantity <= product.alarm_at}", ng-show="approved(product)")
         td
           a(href="/admin/product/{{product._id}}") {{ product.name }}
         td {{ product.description }}
@@ -90,9 +90,9 @@
               .col-md-9
                 input.form-control(name="manufacturer", type="text", placeholder="Product Manufacturer", ng-model="manufacturer", select-on-click)
             .form-group
-              label.col-md-3.control-label(for="alarm_on") Low-Level Alarm
+              label.col-md-3.control-label(for="alarm_enabled") Low-Level Alarm
               .col-md-1
-                input.checkbox-inline(style="vertical-align: bottom", type="checkbox", ng-model="alarm_on")
+                input.checkbox-inline(style="vertical-align: bottom", type="checkbox", ng-model="alarm_enabled")
             .form-group
               label.col-md-3.control-label(for="alarm_at", ng-show="alarm") Set Low-Level Alarm at:
               .col-md-1
